kubernetes/base/apps/libby-hbd-2026/resources/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: libby-hbd-2026
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: v1.33
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
